--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div class="animate-fade-in flex justify-center lg:justify-end">
             <div class="relative">
               <div class="w-80 h-80 lg:w-96 lg:h-96 rounded-3xl overflow-hidden shadow-2xl transform rotate-3 hover:rotate-0 transition-transform duration-300">
-                <img src="src/image.jpg" alt="Gabriela Hensky Salaras" class="w-full h-full object-cover" />
+                <img src="src/image.JPG" alt="Gabriela Hensky Salaras" class="w-full h-full object-cover" />
               </div>
               <div class="absolute -top-4 -right-4 w-24 h-24 bg-accent-500 rounded-full opacity-20 animate-bounce-slow"></div>
               <div class="absolute -bottom-4 -left-4 w-16 h-16 bg-primary-500 rounded-full opacity-30 animate-bounce-slow" style="animation-delay: 1s;"></div>
