nambahin gambar projek

--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
                     <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">MySQL</span>
                   </div>
                   <div class="flex items-center justify-between text-sm text-gray-500">
-                    <span>🗓️ Completed: Jan 2024</span>
-                    <span>⭐ Featured Project</span>
+                    <span>🗓️ Completed: Aug 2024</span>
+                    <span>💼 Internship Project</span>
                   </div>
                 </div>
               </div>
@@ -435,8 +435,8 @@
                     <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">PDF</span>
                   </div>
                   <div class="flex items-center justify-between text-sm text-gray-500">
-                    <span>🗓️ Completed: Dec 2023</span>
-                    <span>💼 Client Project</span>
+                    <span>🗓️ Completed: June 2024</span>
+                    <span>💼 Internship Project</span>
                   </div>
                 </div>
               </div>
@@ -473,8 +473,8 @@
                     <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">Reports</span>
                   </div>
                   <div class="flex items-center justify-between text-sm text-gray-500">
-                    <span>🗓️ Completed: Nov 2023</span>
-                    <span>🏆 Award Winner</span>
+                    <span>🗓️ Completed: March 2025</span>
+                    <span>🏆 Collaboration Project</span>
                   </div>
                 </div>
               </div>
@@ -484,14 +484,14 @@
             <div class="swiper-slide" data-category="web">
               <div class="group bg-white rounded-3xl shadow-lg hover:shadow-2xl transition-all duration-300 overflow-hidden transform hover:-translate-y-2 mx-4">
                 <div class="relative overflow-hidden">
-                  <img src="/placeholder.svg?height=250&width=400" class="w-full h-64 object-cover group-hover:scale-110 transition-transform duration-500" alt="E-Commerce Platform" />
+                  <img src="src/port-4.png" class="w-full h-64 object-cover group-hover:scale-110 transition-transform duration-500" alt="E-Commerce Platform" />
                   <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                   <div class="absolute top-4 left-4">
                     <span class="bg-orange-500 text-white px-3 py-1 rounded-full text-sm font-medium">E-Commerce</span>
                   </div>
                   <div class="absolute bottom-4 left-4 right-4 transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300 opacity-0 group-hover:opacity-100">
                     <div class="flex gap-2">
-                      <button class="bg-white text-gray-900 px-4 py-2 rounded-full font-semibold hover:bg-gray-100 transition-colors duration-200 flex-1">
+                      <button data-modal-target="modal-project4" data-modal-toggle="modal-project4" class="bg-white text-gray-900 px-4 py-2 rounded-full font-semibold hover:bg-gray-100 transition-colors duration-200 flex-1">
                         View Details
                       </button>
                       <a href="#" class="bg-primary-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-primary-700 transition-colors duration-200">
@@ -503,16 +503,16 @@
                 <div class="p-8">
                   <h3 class="text-2xl font-bold font-display mb-3 text-gray-900">E-Commerce Platform</h3>
                   <p class="text-gray-600 mb-4 leading-relaxed">
-                    Full-featured online store with payment integration, inventory management, and customer analytics dashboard.
+                    Mini online store with payment integration, inventory management, and customer analytics dashboard.
                   </p>
                   <div class="flex flex-wrap gap-2 mb-4">
-                    <span class="px-3 py-1 bg-primary-100 text-primary-700 rounded-full text-sm font-medium">Laravel</span>
-                    <span class="px-3 py-1 bg-accent-100 text-accent-700 rounded-full text-sm font-medium">Vue.js</span>
-                    <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">Stripe</span>
+                    <span class="px-3 py-1 bg-primary-100 text-primary-700 rounded-full text-sm font-medium">Django</span>
+                    <span class="px-3 py-1 bg-accent-100 text-accent-700 rounded-full text-sm font-medium">Python</span>
+                    <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">Bootstrap</span>
                   </div>
                   <div class="flex items-center justify-between text-sm text-gray-500">
-                    <span>🗓️ Completed: Feb 2024</span>
-                    <span>🚀 In Production</span>
+                    <span>🗓️ Completed: Aug 2024</span>
+                    <span>🚀 Final Project</span>
                   </div>
                 </div>
               </div>
@@ -867,6 +867,42 @@
                   <span class="px-3 py-1 bg-accent-100 text-accent-700 rounded-full text-sm">Tailwind CSS</span>
                   <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">MySQL</span>
                   <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Chart.js</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal Project 4 -->
+    <div id="modal-project4" tabindex="-1" class="hidden fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-x-hidden overflow-y-auto h-[calc(100%-1rem)] max-h-full">
+      <div class="relative w-full max-w-4xl mx-auto">
+        <div class="relative bg-white rounded-3xl shadow-2xl">
+          <div class="flex justify-between items-start p-6 border-b border-gray-200">
+            <h3 class="text-2xl font-bold text-gray-900">E-Commerce</h3>
+            <button type="button" class="text-gray-400 hover:text-gray-900 p-2" data-modal-hide="modal-project3">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+              </svg>
+            </button>
+          </div>
+          <div class="p-6 space-y-6">
+            <img src="src/port-4.png" class="w-full rounded-2xl" alt="E-Commerce" />
+            <div class="grid md:grid-cols-2 gap-6">
+              <div>
+                <h4 class="text-lg font-semibold mb-3">Project Overview</h4>
+                <p class="text-gray-600 leading-relaxed">
+                  Mini online store with payment integration, inventory management, and customer analytics dashboard.
+                </p>
+              </div>
+              <div>
+                <h4 class="text-lg font-semibold mb-3">Technologies Used</h4>
+                <div class="flex flex-wrap gap-2">
+                  <span class="px-3 py-1 bg-primary-100 text-primary-700 rounded-full text-sm">Django</span>
+                  <span class="px-3 py-1 bg-accent-100 text-accent-700 rounded-full text-sm">Python</span>
+                  <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">MySQL</span>
+                  <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm">Bootstrap</span>
                 </div>
               </div>
             </div>
