--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="text-gray-600 font-medium">Years Experience</div>
               </div>
               <div class="text-center p-6 bg-gray-50 rounded-2xl">
-                <div class="text-3xl font-bold text-accent-500 mb-2" id="projectCount">10+</div>
+                <div class="text-3xl font-bold text-accent-500 mb-2">10+</div>
                 <div class="text-gray-600 font-medium">Projects Completed</div>
               </div>
             </div>
@@ -518,7 +518,7 @@
               </div>
             </div>
 
-            <!-- Project 5 - Mobile App API -->
+            <!-- Project 5 - Mobile App API 
             <div class="swiper-slide" data-category="api mobile">
               <div class="group bg-white rounded-3xl shadow-lg hover:shadow-2xl transition-all duration-300 overflow-hidden transform hover:-translate-y-2 mx-4">
                 <div class="relative overflow-hidden">
@@ -555,8 +555,8 @@
                 </div>
               </div>
             </div>
-
-            <!-- Project 6 - Learning Management System -->
+            -->
+            <!-- Project 6 - Learning Management System 
             <div class="swiper-slide" data-category="web">
               <div class="group bg-white rounded-3xl shadow-lg hover:shadow-2xl transition-all duration-300 overflow-hidden transform hover:-translate-y-2 mx-4">
                 <div class="relative overflow-hidden">
@@ -594,7 +594,7 @@
               </div>
             </div>
           </div>
-          
+          -->
           <!-- Navigation buttons -->
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
