--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
             
             <h1 class="text-5xl lg:text-6xl font-bold font-display mb-6 leading-tight">
-              Hi, I'm <span class="gradient-text">Gabriela</span>
+              Hi, I'm <span class="gradient-text">Gabriela Hensky Salaras</span>
               <br>Full Stack Developer
             </h1>
             
