add project azzahra

--- a/projects.html
+++ b/projects.html
@@ -279,20 +279,20 @@
             </div>
           </div>
         </div>
-        <!-- Dummy Project 5 -->
+        <!-- Project 5 -->
         <div class="project-card bg-white/80 backdrop-blur-lg border border-gradient-to-br from-primary-100 to-accent-100 rounded-3xl shadow-lg hover:shadow-2xl transition-all duration-300 overflow-hidden glass-effect">
-          <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=600&q=80" alt="Portfolio Redesign" class="w-full h-56 object-cover project-img" />
+          <img src="src/port-5.png" alt="Sistem Informasi Sekolah" class="w-full h-56 object-cover project-img" />
           <div class="p-6">
-            <h2 class="text-2xl font-bold font-display mb-2">Portfolio Redesign</h2>
+            <h2 class="text-2xl font-bold font-display mb-2">Sistem Informasi Sekolah</h2>
             <div class="mb-3">
-              <span class="tag tag-laravel">React</span>
-              <span class="tag tag-bootstrap">Tailwind</span>
-              <span class="tag tag-mysql">Framer Motion</span>
+              <span class="tag tag-laravel">Laravel</span>
+              <span class="tag tag-bootstrap">Bootstrap</span>
+              <span class="tag tag-mysql">PHP</span>
             </div>
-            <p class="text-gray-600 mb-4">A modern redesign of a personal portfolio website with advanced animation and glassmorphism.</p>
+            <p class="text-gray-600 mb-4">A comprehensive school information system designed to streamline administrative tasks, manage teacher data, and facilitate communication between staff and teachers.</p>
             <div class="flex items-center justify-between text-sm text-gray-500 mb-2">
-              <span>🗓️ Jan 2024</span>
-              <span>🎨 Personal Project</span>
+              <span>🗓️ Completed: Jan 2025</span>
+              <span>🎨 Freelance Project</span>
             </div>
             <div class="flex gap-2">
               <a href="#" class="bg-primary-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-primary-700 transition-colors duration-200">Live Demo</a>
