--- a/index.html
+++ b/index.html
@@ -770,14 +770,14 @@
                 </div>
               </div>
             </div>
-            <!-- Dummy Project 5 -->
+            <!-- Project 5 -->
             <div class="swiper-slide tilt-card" data-category="web">
               <div class="group bg-white/80 backdrop-blur-lg border border-gradient-to-br from-primary-100 to-accent-100 rounded-3xl shadow-lg hover:shadow-2xl transition-all duration-300 overflow-hidden transform hover:-translate-y-2 mx-4 glass-effect">
                 <div class="relative overflow-hidden">
-                  <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=600&q=80" class="w-full h-64 object-cover group-hover:scale-110 transition-transform duration-500 tilt-img" alt="Portfolio Redesign" />
+                  <img src="src/port-5.png" class="w-full h-64 object-cover group-hover:scale-110 transition-transform duration-500 tilt-img" alt="Portfolio Redesign" />
                   <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                   <div class="absolute top-4 left-4">
-                    <span class="bg-pink-500 text-white px-3 py-1 rounded-full text-sm font-medium">UI/UX</span>
+                    <span class="bg-pink-500 text-white px-3 py-1 rounded-full text-sm font-medium">Sistem Informasi Sekolah</span>
                   </div>
                   <div class="absolute bottom-4 left-4 right-4 transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300 opacity-0 group-hover:opacity-100">
                     <div class="flex gap-2">
@@ -791,18 +791,18 @@
                   </div>
                 </div>
                 <div class="p-8">
-                  <h3 class="text-2xl font-bold font-display mb-3 text-gray-900">Portfolio Redesign</h3>
+                  <h3 class="text-2xl font-bold font-display mb-3 text-gray-900">Sistem Informasi Sekolah</h3>
                   <p class="text-gray-600 mb-4 leading-relaxed">
-                    A modern redesign of a personal portfolio website with advanced animation and glassmorphism.
+                    A comprehensive school information system designed to streamline administrative tasks, manage teacher data, and facilitate communication between staff and teachers.
                   </p>
                   <div class="flex flex-wrap gap-2 mb-4">
-                    <span class="px-3 py-1 bg-primary-100 text-primary-700 rounded-full text-sm font-medium">React</span>
-                    <span class="px-3 py-1 bg-accent-100 text-accent-700 rounded-full text-sm font-medium">Tailwind</span>
-                    <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">Framer Motion</span>
+                    <span class="px-3 py-1 bg-primary-100 text-primary-700 rounded-full text-sm font-medium">Laravel</span>
+                    <span class="px-3 py-1 bg-accent-100 text-accent-700 rounded-full text-sm font-medium">Bootstrap</span>
+                    <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">PHP</span>
                   </div>
                   <div class="flex items-center justify-between text-sm text-gray-500">
-                    <span>🗓️ Completed: Jan 2024</span>
-                    <span>🎨 Personal Project</span>
+                    <span>🗓️ Completed: Jan 2025</span>
+                    <span>🎨 Freelance Project</span>
                   </div>
                 </div>
               </div>
@@ -1225,7 +1225,7 @@
       <div class="relative w-full max-w-4xl mx-auto">
         <div class="relative bg-white rounded-3xl shadow-2xl">
           <div class="flex justify-between items-start p-6 border-b border-gray-200">
-            <h3 class="text-2xl font-bold text-gray-900">Portfolio Redesign</h3>
+            <h3 class="text-2xl font-bold text-gray-900">Sistem Informasi Sekolah</h3>
             <button type="button" class="text-gray-400 hover:text-gray-900 p-2" data-modal-hide="modal-project5" title="Close modal">
               <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
@@ -1233,20 +1233,20 @@
             </button>
           </div>
           <div class="p-6 space-y-6">
-            <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=600&q=80" class="w-full rounded-2xl" alt="Portfolio Redesign" />
+            <img src="src/port-5.png" class="w-full rounded-2xl" alt="Sistem Informasi Sekolah" />
             <div class="grid md:grid-cols-2 gap-6">
               <div>
                 <h4 class="text-lg font-semibold mb-3">Project Overview</h4>
                 <p class="text-gray-600 leading-relaxed">
-                  A modern redesign of a personal portfolio website with advanced animation and glassmorphism.
+                  A comprehensive school information system designed to streamline administrative tasks, manage teacher data, and facilitate communication between staff and teachers.
                 </p>
               </div>
               <div>
                 <h4 class="text-lg font-semibold mb-3">Technologies Used</h4>
                 <div class="flex flex-wrap gap-2">
-                  <span class="px-3 py-1 bg-primary-100 text-primary-700 rounded-full text-sm font-medium">React</span>
-                  <span class="px-3 py-1 bg-accent-100 text-accent-700 rounded-full text-sm font-medium">Tailwind</span>
-                  <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">Framer Motion</span>
+                  <span class="px-3 py-1 bg-primary-100 text-primary-700 rounded-full text-sm font-medium">Laravel</span>
+                  <span class="px-3 py-1 bg-accent-100 text-accent-700 rounded-full text-sm font-medium">Bootstrap</span>
+                  <span class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm font-medium">PHP</span>
                 </div>
               </div>
             </div>
